# OS-Shell

./: CMakeLists.txt  run.sh
Wits-Shell-Tester/: output.9  witsshell  witsshell.c
Wits-Shell-Tester/tests-out/basic/: 1.out  2.out
include/: util.h
src/: main.c  util.c
